// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing afterCreateApp hook should add prettier to extends if formatter is prettier 1`] = `
[
  {
    "code": "# Add further files to ignore here as needed

# dependencies
/node_modules
/.pnp
.pnp.js
 
# testing
/coverage
 
# production
/build",
    "path": ".eslintignore",
  },
  {
    "code": "{
  "env": {
    "browser": true,
    "es2021": true
  },
  "extends": [
    "eslint:recommended",
    "plugin:@typescript-eslint/recommended",
    "plugin:react/recommended",
    "prettier"
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": {
    "ecmaVersion": "latest",
    "sourceType": "module"
  },
  "plugins": ["@typescript-eslint", "react"],
  "settings": {
    "react": {
      "version": "detect"
    }
  },
  "rules": {}
}
",
    "path": ".eslintrc",
  },
]
`;

exports[`Testing afterCreateApp hook should use default settings if no settings are provided 1`] = `
[
  {
    "code": "# Add further files to ignore here as needed

# dependencies
/node_modules
/.pnp
.pnp.js
 
# testing
/coverage
 
# production
/build",
    "path": ".eslintignore",
  },
  {
    "code": "{
  "env": {
    "browser": true,
    "es2021": true
  },
  "extends": [
    "eslint:recommended",
    "plugin:@typescript-eslint/recommended",
    "plugin:react/recommended"
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": {
    "ecmaVersion": "latest",
    "sourceType": "module"
  },
  "plugins": ["@typescript-eslint", "react"],
  "settings": {
    "react": {
      "version": "detect"
    }
  },
  "rules": {}
}
",
    "path": ".eslintrc",
  },
]
`;

exports[`Testing afterCreateApp hook should use provided settings 1`] = `
[
  {
    "code": "# Add further files to ignore here as needed

# dependencies
/node_modules
/.pnp
.pnp.js
 
# testing
/coverage
 
# production
/build",
    "path": ".eslintignore",
  },
  {
    "code": "{
  "env": {
    "browser": true,
    "es2021": true
  },
  "extends": [
    "eslint:recommended",
    "plugin:@typescript-eslint/recommended",
    "plugin:react/recommended"
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": {
    "ecmaVersion": "latest",
    "sourceType": "module"
  },
  "plugins": ["@typescript-eslint", "react"],
  "settings": {
    "react": {
      "version": "detect"
    }
  },
  "rules": {
    "indent": ["error", 4],
    "linebreak-style": ["error", "unix"],
    "quotes": ["error", "single"]
  }
}
",
    "path": ".eslintrc",
  },
]
`;
